# reward-model

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  DECISIONS.md  Makefile  README.md  build_plan.md  pyproject.toml
configs/: models.yaml  paths.yaml  pipeline.yaml
configs/quality/: clean_data_vae.py
scripts/: compute_manav_stats.py  deminf_score_episodes.py  preprocess_and_score.py  preprocess_manav_episodes.py  run_local_pipeline.py  run_with_deminf.sh
src/rdf/: __init__.py  cli.py
src/rdf/data/: manav_chunked_transform.py
src/rdf/decision/: __init__.py  calibrate.py  decide.py  materialize.py
src/rdf/harness/: __init__.py  catalog.py  config.py  idempotency.py  logging.py  mcap_extract.py  queue.py  storage.py  video.py
src/rdf/ingestion/: __init__.py  handler.py
src/rdf/models/: __init__.py  base.py  deminf_worker.py  mock.py  registry.py  robometer_worker.py
src/rdf/schemas/: __init__.py  models.py
tests/: conftest.py  test_decision.py  test_e2e.py  test_harness.py  test_models.py  test_schemas.py  test_stage_a.py  test_video.py
tests/fixtures/: generate_episode.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+8 files in other folders)
